<?xml version="1.0"?>
<package format="2">
    <name>cortex_control_franka</name>
    <version>0.1.0</version>
    <description>Cortex Control ROS extensions with Franka ROS dependencies.</description>

    <maintainer email="isaac-sim-maintainers@nvidia.com">Isaac Sim</maintainer>

    <license>Copyright (c) 2024, NVIDIA CORPORATION. All rights reserved.
        NVIDIA CORPORATION and its licensors retain all intellectual property
        and proprietary rights in and to this software, related documentation
        and any modifications thereto.  Any use, reproduction, disclosure or
        distribution of this software and related documentation without an express
        license agreement from NVIDIA CORPORATION is strictly prohibited.</license>

    <url type="Documentation">https://docs.omniverse.nvidia.com/app_isaacsim/app_isaacsim/overview.html</url>
    <url type="Forums">https://forums.developer.nvidia.com/c/omniverse/simulation/69</url>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>controller_interface</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>franka_hw</depend>
    <depend>hardware_interface</depend>
    <depend>cortex_control</depend>
    <depend>pluginlib</depend>
    <depend>realtime_tools</depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>

    <export>
        <controller_interface plugin="${prefix}/plugin.xml"/>
    </export>
</package>
